// Media interface marks Movie and Series as playable
interface Playable
{

}
