@startuml
'https://plantuml.com/class-diagram
!pragma layout smetana
Main *-- StreamingService
StreamingService "1" *-- "*" User
StreamingService "1" *-- "*" Media
Media <|-- Movie
Media <|-- Series
TextUI <--StreamingService
FileIO <-- StreamingService
Playable <|-- Movie
Playable <|-- Series


class Main
{
+ main()
}

class StreamingService
{
 - ArrayList<User>
 - ArrayList<Movie> movies
 - ArrayList<Series> series
 - User currentUser = null;
 - final List<Media> mediaLibrary;

 + start()
 - loadUsers()
 - validateUser()
 - createNewUser()
 - startMenu()
 - mainMenu()
 - searchByName()
 - searchByCategory()
 - getListOfWatched()
 - getListOfSaved()
 - logIn()
 + getMovies()
 + getSeries()
 + getUsers()
}

abstract class Media
{
# String name
# int ReleaseYear
# double rating
# String category
+ media(int releaseYear, double rating, String category)
playMedia()
}

class Movie
{
- double lengthInMinutes
+ movie(superclass, double lengthInMinutes)
+ toString()
}

class Series
{
- int season
- int episode
- int endYear
+ movie(superclass, int season, int episode, int endYear)
+ toString()
}

class User
{
- String username
- String password
- Arraylist seenMedie
- Arraylist wantsToSee
+ User(String username, String password)
}

class TextUI
{
}

class FileIO
{
}

interface Playable
{

}

@enduml